--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World Dapp</title>
+    <title>CATE Engine</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-  
-        
-        
-        </body>
+  </body>
 </html>
